# Ga-piler

./: CMakeLists.txt  README.md  build.sh
grammars/: AUJava.g4
lexer/include/: lexer.h  number_helper.h  token.h  token_matcher.h
lexer/src/: lexer.cpp  number_helper.cpp  token_matcher.cpp
lexer/test/: assert_lexer.cpp  assert_lexer.h  test_lexer.cpp
src/compiler/: Main.java
src/compiler/codegen/: CodeGeneratorVisitor.java
src/compiler/error/: AUJavaErrorListener.java
src/compiler/grammars/: AUJava.interp  AUJavaBaseListener.java  AUJavaBaseVisitor.java  AUJavaLexer.interp  AUJavaLexer.java  AUJavaLexer.tokens  AUJavaListener.java  AUJavaParser.java  AUJavaVisitor.java
src/compiler/semantic/: DeclarationVisitor.java  TypeCheckVisitor.java
src/compiler/symbol/: ClassSymbol.java  MethodSymbol.java  Scope.java  Symbol.java  SymbolTable.java  Type.java
tests/: Test_Comprehensive  Test_Comprehensive.c  Test_Comprehensive.java
tests/codegen/: Test1_BasicCodeGen  Test1_BasicCodeGen.c  Test1_BasicCodeGen.java  Test2_OOP_Polymorphism  Test2_OOP_Polymorphism.c  Test2_OOP_Polymorphism.java  Test3_StaticMembers  Test3_StaticMembers.c  Test3_StaticMembers.java
tests/invalid/: Test3_LexicalError.java  Test4_SyntaxError.java
tests/semantic/: Test1_ValidSemantic.c  Test1_ValidSemantic.java  Test2_UndeclaredVar.java  Test3_TypeMismatch.java  Test4_CyclicInheritance.java  Test5_BreakOutsideLoop.java  Test6_InvalidPrintln.java
tests/valid/: Test1_Basic.c  Test1_Basic.java  Test2_OOP_Inheritance.c  Test2_OOP_Inheritance.java
